# Interactive-System-for-LLMs-and-RLHF-containerized

./: .dockerignore  .gitignore  Dockerfile  README.md  UV_README.md  artifact.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
backend/api/: API_README.md  api_cc_prompt.txt  app.py  backend_adapter.py
backend/api/api/: routes.py  schemas.py
backend/api/services/: generation_service.py  reward_service.py  storage_service.py
backend/data/: DATA_DOCUMENTATION.md  DATA_README.md
backend/data/app/: cleaner.py  exporter.py  loader.py
backend/data/scripts/: preprocess.py  verify.py
backend/rag_system/: RAG_DOCUMENTATION.md  RAG_README.md  cc_prompt_rag.txt
backend/rag_system/app/: __init__.py  config.py  embed.py  generate.py  index.py  ingest.py  pipeline.py  retrieve.py  utils.py
backend/rag_system/scripts/: build_index.py  chat_cli.py
backend/rag_system/tests/: __init__.py  test_ingest.py  test_pipeline.py  test_retrieve.py
backend/reward_system/: REWARD_DOCUMENTATION.md  REWARD_README.md  main.py  new_r_cc_prompt.txt  r_cc_prompt.txt
backend/reward_system/app/: logger.py  reward_fn.py  schemas.py  trait_loader.py
backend/reward_system/config/: traits.json
backend/reward_system/logs/: reward_log.jsonl
backend/rl_system/: GRPO_QWEN_GUIDE.md  RL_DOCUMENTATION.md  RL_README.md  rl_cc_prompt.txt
backend/rl_system/grpo_system/: config.py  (+5 more)
backend/tests/: test_api_end_to_end.py  test_reward_cross_system.py
backend/user_interface/: UI_README.md  app.py  backend_adapter.py  grpo_adapter.py  main.py  new_ui_cc_prompt.txt  ui_cc_prompt.txt
(+61 files in other folders)
